Remove some comments